# render-code

./: .gitignore  README.md
1-create-a-window/: CMakeLists.txt  main.cpp
2-hello-window-clear/: CMakeLists.txt  main.cpp
3-hello-triangle/: CMakeLists.txt  main.cpp
4-circle/: CMakeLists.txt  main.cpp
4-shader/: CMakeLists.txt
5-texture/: CMakeLists.txt  main.cpp  stb_image.h
docs/: 01-create-a-window.md  02-clear-window.md  03-draw-triangle.md  04-draw-circle-and-ring.md  04-shader.md  05-texture.md  ffmpeg-overview.md  opengl-state-machine.md  skia-overview.md
html/: opengl-state-machine.html  vao-vbo-ebo.html
opengl-state-machine/: CMakeLists.txt  application.cpp  application.h  geometry.cpp  geometry.h  main.cpp  state-machine.vs  state_machine_lab.cpp  state_machine_lab.h
opengl-state-machine/learnopengl/: filesystem.h  root_directory.h.in  shader_s.h
